# STM32H723-CUSTOM-BOARD

./: CMakeLists.txt  README.rst  custom.overlay  prj.conf
src/: main.c
